# lumberjack

./: .gitignore  .prettierignore  README.md  angular.json  bibliography.bib  biome.json  eslint.config.mjs  package-lock.json  package.json  report.tex  tsconfig.base.json  tsconfig.json  tsconfig.paths.json  turbo.json  vitest.config.ts  vitest.workspace.ts
.github/: PULL_REQUEST_TEMPLATE.md
apps/api/: tsconfig.json
apps/api/test/: app.e2e-spec.ts
apps/core/: package.json  tsconfig.json  vitest.config.ts
apps/core/src/: app.controller.ts  app.module.ts  main.ts
apps/web/: angular.json  package.json  tsconfig.json  tsconfig.spec.json
apps/web/src/: index.html  styles.scss
apps/web/src/app/: app.component.spec.ts  app.component.ts  app.config.ts  app.routes.ts
apps/web/src/styles/: colors.scss
code/: package-lock.json  package.json  tsconfig.base.json  vitest.workspace.ts
code/apps/api/: tsconfig.json  vitest.config.ts
code/apps/web/: angular.json  tsconfig.app.json
code/apps/web/src/: styles.scss
desktop/: main.js
projects/jack/: README.md  ng-package.json  package.json  tsconfig.lib.json
projects/jack/src/: index.ts
projects/rust/: Cargo.toml
projects/rust/src/: lib.rs
rust/: Cargo.toml  README.md
rust/src/: main.rs
rust/src/domain/: logs.rs  mod.rs  traits.rs
rust/src/infrastructure/: mod.rs
rust/src/infrastructure/converters/: strings.rs
rust/src/infrastructure/llm/: mod.rs  ollama.rs  traits.rs
rust/src/infrastructure/storage/: file.rs
scripts/: wasm-builder.bash
src/app/: app.component.ts
(+36 files in other folders)
