[package]
name = "lumberjack"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["lib", "bin"]

[dependencies]
shaku = { version = "0.6.2" }
ollama-rs = "0.3.0"
reqwest = { version = "0.12.15", features = ["json"] }
rust_tokenizers = "8.1.1"
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
async-trait = "0.1.88"
chrono = "0.4.40"
regex = "1.11.1"
